--- a/pg/package.json
+++ b/pg/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "dependencies": {
+    "body-parser": "~1.18.2",
+    "express": "~4.16.2",
+    "express-handlebars": "^3.0.0",
     "pg": "~7.3.0"
   },
   "devDependencies": {
