--- a/orm/package.json
+++ b/orm/package.json
@@ -5,9 +5,11 @@
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "~1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "~4.16.2",
     "express-handlebars": "~3.0.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "~7.3.0",
     "pg-hstore": "~2.3.2",
     "sequelize": "~4.20.1"
