--- a/pg/package.json
+++ b/pg/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "express": "~4.16.2",
-    "express-handlebars": "^3.0.0",
+    "express-handlebars": "~3.0.0",
     "pg": "~7.3.0"
   },
   "devDependencies": {
