--- a/orm/package.json
+++ b/orm/package.json
@@ -1,8 +1,11 @@
 {
   "name": "pg-exercise",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "license": "UNLICENSED",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "~1.18.2",
     "cookie-session": "~2.0.0-beta.3",
