--- a/day1/migrate/package.json
+++ b/day1/migrate/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "migration",
+  "name": "migrate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { },
+  "scripts": {},
   "author": "",
-  "license": "ISC"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "db-migrate": "^0.10.0-beta.24",
+    "db-migrate-pg": "^0.2.5"
+  }
 }
