--- a/day2/pg/package.json
+++ b/day2/pg/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "express": "~4.16.2",
     "express-handlebars": "~3.0.0",
-    "pg": "~7.3.0"
+    "pg": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^4.10.0"
