--- a/day2/pg/package.json
+++ b/day2/pg/package.json
@@ -5,6 +5,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "~1.18.2",
+    "db-migrate": "^0.10.0-beta.24",
+    "db-migrate-pg": "^0.2.5",
     "express": "~4.16.2",
     "express-handlebars": "~3.0.0",
     "pg": "~7.3.0"
