--- a/day4/orm/package.json
+++ b/day4/orm/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
