--- a/day4/orm/package.json
+++ b/day4/orm/package.json
@@ -13,9 +13,9 @@
     "express-handlebars": "~3.0.0",
     "passport": "~0.4.0",
     "passport-local": "~1.0.0",
-    "pg": "~7.3.0",
-    "pg-hstore": "~2.3.2",
-    "sequelize": "~4.20.1"
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.20.3"
   },
   "devDependencies": {
     "eslint": "~4.10.0"
